[package]
name = "suspend-bench"
version = "0.1.0"
authors = ["Andrew Whitehead <cywolf@gmail.com>"]
edition = "2018"

[features]
default = []
jemalloc = ["jemallocator"]

[dependencies]
blocking = "1.0"
criterion = "0.3"
futures-channel = "0.3"
futures-lite = "1.11"
jemallocator = { version = "0.3", optional = true }
once_cell = "1.5"
oneshot_rs = { package = "oneshot", version = "0.1.2" }
parking = "2.0"
suspend-channel = { path = "../suspend-channel" }
suspend-core = { path = "../suspend-core" }
suspend-exec = { path = "../suspend-exec" }

[[bench]]
name = "block_on"
harness = false

[[bench]]
name = "channel"
harness = false

[[bench]]
name = "listener"
harness = false

[[bench]]
name = "send_once"
harness = false

[[bench]]
name = "send_once_threaded"
harness = false

[[bench]]
name = "shared"
harness = false

[[bench]]
name = "threadpool"
harness = false
