[package]
name = "suspend-channel"
version = "0.1.0"
authors = ["Andrew Whitehead <cywolf@gmail.com>"]
edition = "2018"
description = "Channel and stream implementations"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/andrewwhitehead/suspend-rs/"
documentation = "https://docs.rs/suspend-channel"
categories = ["asynchronous", "concurrency", "data-structures"]
keywords = ["channel", "future", "stream"]

[lib]
name = "suspend_channel"
path = "src/lib.rs"

[features]
default = ["std"]
std = ["suspend-core/std"]

[dependencies]
futures-core = "0.3"
maybe-cell = { version = "0.1", path = "../maybe-cell" }
suspend-core = { version = "0.1", path = "../suspend-core", default-features = false }

[dev-dependencies]
futures-task = "0.3"
