[package]
name = "suspend-exec"
version = "0.1.0"
authors = ["Andrew Whitehead <cywolf@gmail.com>"]
edition = "2018"
description = ""
license = "MIT"
readme = "README.md"
repository = "https://github.com/andrewwhitehead/suspend-rs/"
categories = ["asynchronous", "concurrency", "data-structures"]
keywords = ["park", "future", "stream", "thread", "waker"]

[lib]
name = "suspend_exec"
path = "src/lib.rs"

[features]
default = []

[dependencies]
num_cpus = "1.13"
once_cell = "1.5"
suspend-channel = { version = "0.1", path = "../suspend-channel" }
tracing = "0.1"

[dev-dependencies]
futures-lite = "1.11"
tracing-subscriber = "0.2"
