[package]
name = "suspend-exec"
version = "0.1.0"
authors = ["Andrew Whitehead <cywolf@gmail.com>"]
edition = "2018"
description = ""
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/andrewwhitehead/suspend-rs/"
documentation = "https://docs.rs/suspend-exec"
categories = ["asynchronous", "concurrency", "data-structures"]
keywords = ["park", "future", "stream", "thread", "waker"]

[lib]
name = "suspend_exec"
path = "src/lib.rs"

[features]
default = []

[dependencies]
cfg-if = "1.0"
num_cpus = "1.13"
once_cell = "1.5"
suspend-channel = { version = "0.1", path = "../suspend-channel" }
suspend-core = { version = "0.1", path = "../suspend-core" }
tracing = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2.71"

[dev-dependencies]
tracing-subscriber = "0.2"
